--- a/public/bin/css/style.css
+++ b/public/bin/css/style.css
@@ -1,5 +1,5 @@
 .branding {
-    filter: invert(41%) sepia(85%) saturate(5612%) hue-rotate(211deg) brightness(104%) contrast(103%);
+    filter: invert(28%) sepia(97%) saturate(7139%) hue-rotate(281deg) brightness(99%) contrast(127%);
 }
 
 .navbar .navbar-nav {
@@ -7,14 +7,21 @@
 }
 
 .navbar .navbar-nav a {
-    color: #0d6efd;
+    color: #BF00FF;
 }
 
-.navbar-nav .nav-link.active, .navbar-nav .show > .nav-link {
-	color: #0d6efd;
+.navbar-nav .nav-link.active,
+.navbar-nav .show>.nav-link {
+    color: #BF00FF;
+    ;
     font-weight: bold;
 }
 
-.nav-link:focus, .nav-link:hover {
+.nav-link:focus,
+.nav-link:hover {
     font-weight: bold;
+}
+
+.text-custom {
+    color: #BF00FF;
 }
